classDiagram

    class Tier {
        -name :String
        -gattung :String
        -gewicht :double
        +gehen() void
        +fressen() void
        +toString() String
    }

    class Loewe {
        +gehen() void
        +fressen() void
        +bruellen() void
        +jagen() void
        +toString() String
    }

    class Elefant {
        -stossZahnLaenge double
        -ruesselLaenge double
        +gehen() void
        +fressen() void
        +toString() String
    }

    Tier : "ArrayList<Tier>"
    Tier <|-- Loewe
    Tier <|-- Elefant